--- a/Analysis/CH1.tex
+++ b/Analysis/CH1.tex
@@ -297,6 +297,9 @@
     \end{proof}
 
 
+    Now we turn to a very important fact about $\R$, That you can write it as the disjoint union of rationals and irrationals, and 
+    that the closure of $\Q = \R$. 
+
     
     \begin{thm}
         For $x, y \in \R$ with $x < y$ there exists $m, n \in \Z$ such that 
@@ -311,7 +314,7 @@
         \[0 < 1 + nx < y \] 
 
         Now fix $m \in \Z$ such that $xn < m \leq xn + 1$. Then from $eq(1)$ it follows 
-        \[nx< x < nx + 1 < ny \implies nx < m < ny \implies x < \frac{m}{n} < y. \]
+        \[nx< x \leq nx + 1 < ny \implies nx < m < ny \implies x < \frac{m}{n} < y. \]
 
     \end{proof}
 
