--- a/Analysis/HW1.tex
+++ b/Analysis/HW1.tex
@@ -2,6 +2,9 @@
 \begin{document}
 \maketitle
 
+\question 
+new thing
+
 \question
 Show that there doesn't exist a rational number $s$ such that $s^2 = 6$. 
 
