--- a/LinearAlgebra/fox-hw1-mth-513.tex
+++ b/LinearAlgebra/fox-hw1-mth-513.tex
@@ -628,7 +628,7 @@ Show that $\phi$ is an injective (or one-to-one) function.
 		\rix
 	\end{equation}
 
-	Now since $2 \times 2$ matrices form a vector space, they form an Abelian group so we may subtract either matrix from both sides; this 
+	We may subtract either matrix from both sides; this 
 	gives $x - w = 0$ and $y - z = 0$, which is to say that the real and imaginary parts of $a$ and $b$ are the same, but then $a = b$. 
 	Thus, $\phi$ is an injection. 
 \end{proof}
@@ -811,7 +811,7 @@ z_1 \\ z_2 \\ z_3 \\ z_4
 
 
 Let $\bfb = \mat{r} e \\ f \\ g \\ h \rix \, $ and 
-$A = \mat{rrrr} a & - b & -c & -d \\ b & a & -d & c \\ c & d & a & - d \\ d & -c & b & a \rix \, \newline $
+$A = \mat{rrrr} a & - b & -c & -d \\ b & a & -d & c \\ c & d & a & - b \\ d & -c & b & a \rix \, \newline $
 Then computing the matrix vector product, gives the desired result. 
 
 
