--- a/Topology/HW_1.tex
+++ b/Topology/HW_1.tex
@@ -4,7 +4,7 @@
 \maketitle
 
 \question 
-Which of the 9 topologies in the example given in the chapter are comparable. Numbering from top left to right, 
+TYhis is somthing Which of the 9 topologies in the example given in the chapter are comparable. Numbering from top left to right, 
 
 \begin{center}
     \begin{tabular}{ |c|c|c|c| } 
