Topology and analysis HW + notes

--- a/Analysis/CH1.tex
+++ b/Analysis/CH1.tex
@@ -420,6 +420,9 @@
     to prove the nested interval property, and from that we see that we can show the real numbers are uncountable, this shows that the assumption 
     that $\R$ is a complete metric space is what forces us to be uncountable. 
     One may wonder, can one assume the nested interval property and prove that every nonempty set that is bounded above has a least upper bound? 
-    I leave it as a exercise. 
+    The answer is no, the nested interval property is weaker than compleness axiom. 
+
+
+    
 
 \end{chapter}
