--- a/Analysis/HW1.tex
+++ b/Analysis/HW1.tex
@@ -2,8 +2,6 @@
 \begin{document}
 \maketitle
 
-\question 
-new thing
 
 \question
 Show that there doesn't exist a rational number $s$ such that $s^2 = 6$. 
@@ -66,10 +64,7 @@ Find all $x \in \R$ that satisfy the inequality
     \[(-\infty, -5/2) \cup (3/2, \infty) \cap (-3, 2) = (-3, -5/2) \cup (3/2, 2)\]
 \end{proof}
 
-\question 
-place holder 
-
-
+\question  
 \begin{alphaparts}
 \questionpart
 
@@ -127,8 +122,6 @@ Prove that $\sup(A+B) = \sup(A) + \sup(B)$
 \end{proof}
 
 \question 
-place holder 
-
 I first reprove a result from class. If every element of a set $B$ is an upperbound for a set $A$, then $\inf(B)$ is an upperbound for $A$. 
 \begin{proof}
     Assume every element of $B$ is an upper bound for $A$, then if $\inf(B) < a$ for some $a \in A$, there exists $\epsilon = a - \inf(B) > 0$ such that $\inf(B) + \epsilon = a$, but 
@@ -152,7 +145,7 @@ If $u > 0$ and $x < y$ show there exists a rational number $x < ru< y$.
     $m \in \N$ to be the intger such that $xn < m \leq xn + 1$. Then we have 
     \[xn < m \leq xn + 1 < yn \implies xn < m < yn \implies x < \frac{m}{n} < y.\]
     Now note $\frac{x}{u}, \frac{y}{u} \in \R$ so there exists $s, t \in \Z$ such that 
-    \[\frac{x}{u} < \frac{s}{t} < \frac{y}{u} \implies x < \frac{su}{y} < y \]
+    \[\frac{x}{u} < \frac{s}{t} < \frac{y}{u} \implies x < \frac{su}{t} < y \]
     and we are done. 
 \end{proof}
     
