--- a/Topology/notes.tex
+++ b/Topology/notes.tex
@@ -17,7 +17,11 @@
 \newcommand{\eps}{\varepsilon}
 \newcommand{\ssd}{\bigtriangleup}
 \newcommand{\pow}{\mathcal{P}}
+\newcommand{\interior}[1]{%
+  {\kern0pt#1}^{\mathrm{o}}%
+}
 
+\def\cA{\bar{A}}
 \newtheoremstyle{break}%
 {}{}%
 {\itshape}{}%
