--- a/Analysis/notes.tex
+++ b/Analysis/notes.tex
@@ -1,10 +1,29 @@
 \documentclass[11pt]{report}
 
-%\usepackage{ntheorem}
 \usepackage{amssymb, graphicx, amsmath, amsthm}
+\usepackage{latexsym,amscd, }
+\usepackage{verbatim, lscape, xcolor, mathtools}
+\usepackage{enumerate, collcell, array}
+\usepackage{commath}
+
+\setlength{\textwidth}{6.5in}
+\setlength{\textheight}{9.2in}
+\setlength{\topmargin}{-.6in}
+\hoffset -1.1in
+
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks   = true, %Colour links instead of ugly boxes
+	urlcolor     = blue, %Colour for external hyperlinks
+	linkcolor    = blue, %Colour of internal links
+	citecolor   = red %Colour of citations
+} 
 \RequirePackage{graphicx}
 \RequirePackage{hyperref}
-\usepackage{commath}
+
+
+
+
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
@@ -30,6 +49,353 @@
 \newtheorem{rem}[thm]{Remark}
 \newtheorem{ex}{Example}[section]
 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%
+%%		MATRIX CONSTRUCTIONS            
+%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand {\mat}  [1] {\left[\begin{array}{#1}}
+    \newcommand {\rix}      {\end{array}\right]}
+    
+    
+    \def\bmatrix#1		{\left[\matrix{#1}\right]}
+    \def\kbyk			{k \times k}
+    \def\mbym			{m \times m}
+    \def\mbyn			{m \times n}
+    \def\nbyn			{n \times n}
+    \def\pbyp			{p \times p}
+    \def\pbyn			{p \times n}
+    
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		OCCASIONAL USE            
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \newcommand{\<}			{\langle}
+    \renewcommand{\>}      		{\rangle}
+    \newcommand{\nin}			{\noindent}
+    \newcommand{\tensor}        	{\otimes}
+    \newcommand{\dsum}          	{\oplus}
+    \newcommand{\adj}			{\textstyle \star}
+        
+    \def\wt					{\widetilde}
+    \def\wh					{\widehat}
+    \def\ov					{\overline}
+        
+    \newcommand{\vareps}   		{\varepsilon}
+    \renewcommand{\l}       		{\ensuremath{\lambda}}
+    \newcommand{\la}        		{\ensuremath{\lambda}}
+        
+    \renewcommand{\a}       		{\ensuremath{\alpha}}
+    \renewcommand{\b}			{\ensuremath{\beta}}
+    \newcommand{\g}       		{\ensuremath{\gamma}}
+    \renewcommand{\d}			{\ensuremath{\delta}}
+    \newcommand{\s}       		{\sigma}  
+    
+        
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		NORM SHORTCUTS            
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \def\normt#1				{\|#1\|_2}
+    \def\normp#1				{\|#1\|_p}
+    \def\normtq#1				{\|\,#1\,\|_2}
+    \def\normo#1				{\|#1\|_\infty}
+    \def\norm#1				{\|#1\|}
+    \def\normF#1				{\|#1\|_F}
+    
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		MATH OPERATORS            
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \def\max				{\mathop{\rm max}}
+    \def\rank				{\mathop{\rm rank}}
+    \def\min				{\mathop{\rm min}}
+    \def\rev				{\mathop{\rm rev}}
+    \def\diag				{\mathop{\rm diag}}
+    \def\det				{\mathop{\rm det}}
+    \def\grade				{\mathop{\rm grade}}
+    \def\ord				{\mathop{\rm ord}}
+    \def\deg				{\mathop{\rm deg}}
+    \def\trace				{\mathop{\rm trace}}
+    \def\sign				{\mathop{\rm sign}}
+    %\def\span{\mathop{\sf span}}
+    \def\colsp				{\mathop{\sf ColSp}}
+    \def\rowsp				{\mathop{\sf RowSp}}
+    
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		MACROS         
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \def\mystrut#1{\rule{0cm}{#1}}  % E.g. 0.4cm % adds vspace after rule
+        
+    % For fine-tuning spacing in \sqrt etc=.  From \cite[p.~155]{knut99}.
+    % In math mode, @ will act as a macro that adds 1 unit of space.
+        \mathcode`@="8000 % Make @ behave as per catcode 13 (active).  TeXbook p. 155.
+        {\catcode`\@=\active\gdef@{\mkern1mu}}
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		Uppercase GREEK Characters Italic           
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    % Make uppercase Greek characters italic.
+    % Copied from latex.ltx and changed second digit from 0 (roman font)
+    % to 1 (math italic).
+    \mathchardef\Gamma="7100
+    \mathchardef\Delta="7101
+    \mathchardef\Theta="7102
+    \mathchardef\Lambda="7103
+    \mathchardef\Xi="7104
+    \mathchardef\Pi="7105
+    \mathchardef\Sigma="7106
+    \mathchardef\Upsilon="7107
+    \mathchardef\Phi="7108
+    \mathchardef\Psi="7109
+    \mathchardef\Omega="710A
+    
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		SCRIPT LETTERS            
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \newcommand{\cA}		{{\cal A}}
+    \newcommand{\cB}		{{\cal B}}
+    \newcommand{\cC}		{{\cal C}}
+    \newcommand{\cD}		{{\cal D}}
+    \newcommand{\cE}		{{\cal E}}
+    \newcommand{\cF}		{{\cal F}}
+    \newcommand{\cG}		{{\cal G}}
+    \newcommand{\cH}		{{\cal H}}
+    \newcommand{\cI}		{{\cal I}}
+    \newcommand{\cJ}		{{\cal J}}
+    \newcommand{\cK}		{{\cal K}}
+    \newcommand{\cL}		{{\cal L}}
+    \newcommand{\cM}		{{\cal M}}
+    \newcommand{\cN}		{{\cal N}}
+    \newcommand{\cO}		{{\cal O}}
+    \newcommand{\cP}		{{\cal P}}
+    \newcommand{\cQ}		{{\cal Q}}
+    \newcommand{\cR}		{{\cal R}}
+    \newcommand{\cS}		{{\cal S}}
+    \newcommand{\cT}		{{\cal T}}
+    \newcommand{\cU}		{{\cal U}}
+    \newcommand{\cV}		{{\cal V}}
+    \newcommand{\cW}		{{\cal W}}
+    \newcommand{\cX}		{{\cal X}}
+    \newcommand{\cY}		{{\cal Y}}
+    \newcommand{\cZ}		{{\cal Z}}
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		CONSTANT Matrices            
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%%%%           BLACKBOARD LETTERS             %%%%%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \newcommand{\bA}		{\mathbb{A}}
+    \newcommand{\bB}		{\mathbb{B}}
+    \newcommand{\bC}		{\mathbb{C}}
+    \newcommand{\bD}		{\mathbb{D}}
+    \newcommand{\bE}		{\mathbb{E}}
+    \newcommand{\bF}		{\mathbb{F}}
+    \newcommand{\bG}		{\mathbb{G}}
+    \newcommand{\bH}		{\mathbb{H}}
+    \newcommand{\bI}		{\mathbb{I}}
+    \newcommand{\bJ}		{\mathbb{J}}
+    \newcommand{\bK}		{\mathbb{K}}
+    \newcommand{\bL}		{\mathbb{L}}
+    \newcommand{\bM}		{\mathbb{M}}
+    \newcommand{\bN}		{\mathbb{N}}
+    \newcommand{\bO}		{\mathbb{O}}
+    \newcommand{\bP}		{\mathbb{P}}
+    \newcommand{\bQ}		{\mathbb{Q}}
+    \newcommand{\bR}		{\mathbb{R}}
+    \newcommand{\bS}		{\mathbb{S}}
+    \newcommand{\bT}		{\mathbb{T}}
+    \newcommand{\bU}		{\mathbb{U}}
+    \newcommand{\bV}		{\mathbb{V}}
+    \newcommand{\bW}		{\mathbb{W}}
+    \newcommand{\bX}		{\mathbb{X}}
+    \newcommand{\bY}		{\mathbb{Y}}
+    \newcommand{\bZ}		{\mathbb{Z}}
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		CONSTANT Matrices            
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%%%%%           SANS SERIF LETTERS             %%%%%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \newcommand{\sA}	{\mathsf{A}}
+    \newcommand{\sB}	{\mathsf{B}}
+    \newcommand{\sC}	{\mathsf{C}}
+    \newcommand{\sD}	{\mathsf{D}}
+    \newcommand{\sE}	{\mathsf{E}}
+    \newcommand{\sF}	{\mathsf{F}}
+    \newcommand{\sG}	{\mathsf{G}}
+    \newcommand{\sH}	{\mathsf{H}}
+    \newcommand{\sI}	{\mathsf{I}}
+    \newcommand{\sJ}	{\mathsf{J}}
+    \newcommand{\sK}	{\mathsf{K}}
+    \newcommand{\sL}	{\mathsf{L}}
+    \newcommand{\sM}	{\mathsf{M}}
+    \newcommand{\sN}	{\mathsf{N}}
+    \newcommand{\sO}	{\mathsf{O}}
+    \newcommand{\sP}	{\mathsf{P}}
+    \newcommand{\sQ}	{\mathsf{Q}}
+    \newcommand{\sR}	{\mathsf{R}}
+    \newcommand{\sS}	{\mathsf{S}}
+    \newcommand{\sT}	{\mathsf{T}}
+    \newcommand{\sU}	{\mathsf{U}}
+    \newcommand{\sV}	{\mathsf{V}}
+    \newcommand{\sW}	{\mathsf{W}}
+    \newcommand{\sX}	{\mathsf{X}}
+    \newcommand{\sY}	{\mathsf{Y}}
+    \newcommand{\sZ}	{\mathsf{Z}}
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		CONSTANT Matrices            
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%%%%%%%%%           COLORS             %%%%%%%%%%%%%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \usepackage{colortbl}
+    % \usepackage{xcolor}
+    %
+    \definecolor{lightgrey}{rgb}{.9,.9,.9}
+    \definecolor{mediumgrey}{rgb}{.6,.6,.6}
+    \definecolor{darkgrey}{rgb}{.3,.3,.3}
+    %
+    \definecolor{lightgreen}{rgb}{0.7,1.0,0.7}
+    \definecolor{mediumgreen}{rgb}{0.3,1.0,0.3}
+    \definecolor{darkgreen}{rgb}{0.0,0.7,0.0}
+    %
+    \definecolor{lightred}{rgb}{1.0,0.6,0.6}
+    \definecolor{mediumred}{rgb}{1.0,0.3,0.3}
+    \definecolor{darkred}{rgb}{0.8,0.0,0.0}
+    %
+    \definecolor{lightblue}{rgb}{0.8,0.8,1.0}
+    \definecolor{mediumblue}{rgb}{0.5,0.5,1.0}
+    \definecolor{darkblue}{rgb}{0.1,0.1,0.9}
+    %
+    \definecolor{green}{rgb}{0.0,0.7,0.0}
+    \definecolor{red}{rgb}{1.0,0.0,0.0}
+    %
+    \definecolor{magenta}{rgb}{.75,0,.75}
+    \definecolor{hotpink}{rgb}{0.9,0,0.5}
+    \definecolor{cyan}{rgb}{0,0.8, .8}
+    %
+    \def\tcr#1{\textcolor{red}{1}}
+    \def\tcb#1{\textcolor{blue}{1}}
+    \def\tcg#1{\textcolor{darkgreen}{1}}
+    
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		CONSTANT Matrices            
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%%%% Constant matrices 
+    \def\Fn{\mathbb{F}^{n}}
+    \def\Fm{\mathbb{F}^{m}}
+    \def\Fp{\mathbb{F}^{p}}
+    
+    \def\Fnn{\mathbb{F}^{n\times n}}
+    \def\Fmm{\mathbb{F}^{m\times m}}
+    \def\Fpp{\mathbb{F}^{p\times p}}
+    
+    \def\Fmn{\mathbb{F}^{m\times n}}
+    \def\Fnm{\mathbb{F}^{n\times m}}
+    
+    \def\Fmp{\mathbb{F}^{m\times p}}
+    \def\Fpm{\mathbb{F}^{p\times m}}
+    
+    \def\Fnp{\mathbb{F}^{n\times p}}
+    \def\Fpn{\mathbb{F}^{p\times n}}
+    
+    %%%%% Constant matrices over R
+    \def\Rn{\mathbb{R}^{n}}
+    \def\Rm{\mathbb{R}^{m}}
+    \def\Rp{\mathbb{R}^{p}}
+    
+    \def\Rnn{\mathbb{R}^{n\times n}}
+    \def\Rmm{\mathbb{R}^{m\times m}}
+    \def\Rpp{\mathbb{R}^{p\times p}}
+    
+    \def\Rmn{\mathbb{R}^{m\times n}}
+    \def\Rnm{\mathbb{R}^{n\times m}}
+    
+    \def\Rmp{\mathbb{R}^{m\times p}}
+    \def\Rpm{\mathbb{R}^{p\times m}}
+    
+    \def\Rnp{\mathbb{R}^{n\times p}}
+    \def\Rpn{\mathbb{R}^{p\times n}}
+    
+    
+    
+    %%%%% Constant matrices over C
+    \def\Cn{\mathbb{C}^{n}}
+    \def\Cm{\mathbb{C}^{m}}
+    \def\Cp{\mathbb{C}^{p}}
+    
+    \def\Cnn{\mathbb{C}^{n\times n}}
+    \def\Cmm{\mathbb{C}^{m\times m}}
+    \def\Cpp{\mathbb{C}^{p\times p}}
+    
+    \def\Cmn{\mathbb{C}^{m\times n}}
+    \def\Cnm{\mathbb{C}^{n\times m}}
+    
+    \def\Cmp{\mathbb{C}^{m\times p}}
+    \def\Cpm{\mathbb{C}^{p\times m}}
+    
+    \def\Cnp{\mathbb{C}^{n\times p}}
+    \def\Cpn{\mathbb{C}^{p\times n}}
+    
+    
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    %%
+    %%		BOLDFACE VECTORS            
+    %%
+    %%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \def\bfa	{\mathbf{a}}
+    \def\bfb	{\mathbf{b}}
+    \def\bfc	{\mathbf{c}}
+    \def\bfd	{\mathbf{d}}
+    \def\bfe	{\mathbf{e}}
+    \def\bfo	{\mathbf{0}}
+    \def\bfp	{\mathbf{p}}
+    \def\bfq	{\mathbf{q}}
+    \def\bfr 	{\mathbf{r}}
+    \def\bfs 	{\mathbf{s}}
+    \def\bft	{\mathbf{t}}
+    \def\bfu	{\mathbf{u}}
+    \def\bfv	{\mathbf{v}}
+    \def\bfw	{\mathbf{w}}
+    \def\bfx	{\mathbf{x}}
+    \def\bfy	{\mathbf{y}}
+    \def\bfz	{\mathbf{z}}	
+    
+    \newcommand{\zvec}    {\ensuremath{\mathbf{0}}}
+    
+    
+
 % TODO: replace these with your information
 % TODO: replace these with your information
 \author{Evan Fox}
@@ -39,4 +405,5 @@
 \maketitle
 \tableofcontents
 \include{CH1.tex}
+\include{CH2.tex}
 \end{document}
