--- a/Topology/HW_1.tex
+++ b/Topology/HW_1.tex
@@ -129,17 +129,17 @@ So the topology is $ \{\varnothing, X, \{a\}, \{b\}, \{a, b\}, \{b, c\}\}$
 
 
 \question 
-We start with $\T_1$, by definition it is contained in $\T_2$, then given a basis element of $\T_1$, $(a, b)$ we may fix $z \in (a, b)$ and take $b^\prime = z + \frac{b-z}{2}$ so that $z \in (a, b^\prime]$, hence $T_1$ is corser than $\T_4$. Then noting that $\T_5$ forms a subbasis for the 
-standard topology on $\R$ we have that $\T_1$ is also contained in $\T_5$ and that $\T_5 $ is contained in $\T_1$. Now any element of $\T_3$ will be in $\T_1$ since any element of $U \in \T_3$ has a finite complement, and since finite sets are closed in $\T_1$, we must have $U \in \T_1$. 
+We start with $\T_1$, by definition it is contained in $\T_2$, then given a basis element of $\T_1$, $(a, b)$ we may fix $z \in (a, b)$ and take $b^\prime = z + \frac{b-z}{2}$ so that $z \in (a, b^\prime]$, hence $T_1$ is corser than $\T_4$. We have that $\T_5$ is contained in $\T_1$. 
+Now any element of $\T_3$ will be in $\T_1$ since any element of $U \in \T_3$ has a finite complement, and since finite sets are closed in $\T_1$, we must have $U \in \T_1$. 
 
 Now we already know $\T_2$ contains $\T_1$ and so it also will contain $\T_3$ and $\T_5$. We prove that it is not comparable with $\T_4$, Now $\T_2 \subsetneq \T_4$ is clear, and considering $(0, 1]$ we see $1 \in (0, 1]$ and that there is no open set in $\T_2$ contained in $(0, 1]$ which contains $1$. 
 hence the topologies are not comparable. 
 
-We have already seen $\T_3 \subset \T_1 = \T_5 \subset \T_4$ and $\T_3 \subset \T_1 \subset \T_2$ also holds. 
+We have already seen $\T_3 \subset \T_1 \subset \T_4$ and $\T_3 \subset \T_1 \subset \T_2$ also holds. It is not comparable with $\T_5$. 
 
 Now $\T_4 \supset \T_1 = \T_5 \supset \T_3$ has been established, as well as $\T_4 \supset \T_1 \supset T_2$. 
 
 
-Then again $\T_5 = \T_1$ and we have already completed $\T_1$. To see that this is indeed as subbasis as I claim, note $(a, b) = (-\infty, b) \cap (-\infty, a)
+Then again $\T_5 \subset \T_1$
 \end{alphaparts}
 \end{document}
