--- a/Analysis/HW_preamble.tex
+++ b/Analysis/HW_preamble.tex
@@ -14,9 +14,9 @@
 % TODO: replace these with your information
 \newcommand{\hwname}{Evan Fox}
 \newcommand{\hwemail}{efox20@uri.edu}
-\newcommand{\hwtype}{Chapter}
+\newcommand{\hwtype}{HW}
 \newcommand{\hwnum}{1}
-\newcommand{\hwclass}{Analysis}
+\newcommand{\hwclass}{MTH 435: Analysis}
 \newcommand{\hwlecture}{}
 \newcommand{\hwsection}{}
 
