--- a/Analysis/HW1.tex
+++ b/Analysis/HW1.tex
@@ -8,10 +8,10 @@ Show that there doesn't exist a rational number $s$ such that $s^2 = 6$.
 
 
 \begin{proof}
-    First we prove that $6|a^2 \implies 6|a$. Suppose that $6$ does not devide $a$ and let $a = p_1p_2 \dots p_n$ 
+    First we prove that $6|a^2 \implies 6|a$. Suppose that $6$ does not divide $a$ and let $a = p_1p_2 \dots p_n$ 
     be the prime factorization of $6$, then we know that $3$ and $2$ cannot both be common factors,  
     But then since $2$ and $3$ are prime they cannot be the square of a prime number, hence $2$ and $3$ cannot both 
-    appear in $a^2 = p_1^2 p_2^2 \dots p_n^2$, hence $6$ does not devide $a^2$. It now follows by contrapositive that 
+    appear in $a^2 = p_1^2 p_2^2 \dots p_n^2$, hence $6$ does not divide $a^2$. It now follows by contrapositive that 
     if $6|a^2$ then $6|a$. 
 
     Now assume there exists $a, b \in \Z$ such that 
@@ -30,16 +30,16 @@ If $a, b \in \R$ show that $|a + b| = |a| + |b| $ iff $ab \geq 0$.
 \begin{proof}
     For the forward direction we use contrapositive, assume $ab < 0$ then without loss of generality assume $a > 0$ and $b<0$, we show that 
     \[|a +b | \neq |a| + |b| \] 
-    we have by our assumtions on $a$ and $b$ that $|a| + |b| = a - b$. 
+    we have by our assumptions on $a$ and $b$ that $|a| + |b| = a - b$. 
     Now there are three cases (by tricotomy) for what $|a+b|$ can map to, if $|a + b| = 0$
     we are done since $| a| + |b| > 0$. 
-    If $a + b$ is poisitve $|a + b| = a + b$, but then $a + b = a - b$ would imply $b = 0$, contradicting our assumtion on $b$.
-    If $a + b$ is negative $|a + b| = -a -b$, but now $-a -b = a - b$ would force $a = 0$, contradicting our assumtion on $a$. 
+    If $a + b$ is positive $|a + b| = a + b$, but then $a + b = a - b$ would imply $b = 0$, contradicting our assumption on $b$.
+    If $a + b$ is negative $|a + b| = -a -b$, but now $-a -b = a - b$ would force $a = 0$, contradicting our assumption on $a$. 
     Hence, in every case equality does not hold. This proves the first direction.
     
-    Now assume $ab \geq 0$, if either is equal to zero we are done. If they are both posisitive it follows since $a + b$ will be posistive giving 
+    Now assume $ab \geq 0$, if either is equal to zero we are done. If they are both positive it follows since $a + b$ will be positive giving 
     \[|a + b| = a + b = |a| + |b|.\]
-    Then if they are both negative, their sum will be negitive so,
+    Then if they are both negative, their sum will be negative so,
     \[|a + b| = -a - b = |a| + |b|\]
     completing the opposite direction. 
 \end{proof}
@@ -100,8 +100,8 @@ gives $\frac{1}{2} < 1 + 1/n$. If $n>2$ is even we have $1/n < 1/2$ which implie
 if a set contains a minimal element it is the infinium since we have $1/2 < x$ for all $x \in S_4$ it is a lower bound and since it is an element of $S_4$, given any lower bound $l$, we must 
 have $l \leq 1/2$. 
 
-$\sup S_4 = 2$, I proceed with a very simillar argument as above, $2$ appears in $S_4$ when $n=1$, for any $n>1$ either we are subtracting from $1$, or adding a number smaller than $1$ to $1$, in either case 
-we get somthing less than $2$. Thus $2$ is the maximal element of the set and hence it must be the supremum. 
+$\sup S_4 = 2$, I proceed with a very similar argument as above, $2$ appears in $S_4$ when $n=1$, for any $n>1$ either we are subtracting from $1$, or adding a number smaller than $1$ to $1$, in either case 
+we get something less than $2$. Thus $2$ is the maximal element of the set and hence it must be the supremum. 
 \end{proof}
 
 
@@ -113,27 +113,27 @@ Prove that $\sup(A+B) = \sup(A) + \sup(B)$
     Let $\alpha = \sup (A)$ and $\beta = \sup (B)$. Then for all $a, b$ we have 
     $a \leq \alpha$ and $b \leq \beta$, thus 
     \[a + b \leq \alpha + \beta, \forall a \in A, b \in B. \] 
-    So $\alpha + \beta $ is an upperbound for the set $A + B$. But then for $\epsilon > 0$ there exists $b_0 \in B$ such that 
+    So $\alpha + \beta $ is an upper bound for the set $A + B$. But then for $\epsilon > 0$ there exists $b_0 \in B$ such that 
     $ \beta - \frac{1}{2}\epsilon < b_0$ and $a_0 \in A$ such that $a - \frac{1}{2}\epsilon < a_0$, so $\alpha + \beta - \epsilon < a_0 + b_0$,
     Thus $\alpha + \beta = \sup( A + B)$. 
-    A very simillar argument works for infinium. Let $a = \inf(A)$ and $b = \inf(B)$. Then $a + b$ is a lower bound for $A + B$ for the same reasons stated above. 
-    But then given $\epsilon > 0$, I can find elements $a_0, b_0$ in $A$ and $B$ respectivly such that $a + b + \epsilon > a_0 + b_0$, so 
+    A very similar argument works for infinium. Let $a = \inf(A)$ and $b = \inf(B)$. Then $a + b$ is a lower bound for $A + B$ for the same reasons stated above. 
+    But then given $\epsilon > 0$, I can find elements $a_0, b_0$ in $A$ and $B$ respectively such that $a + b + \epsilon > a_0 + b_0$, so 
     $a + b = \inf(A + B)$. 
 \end{proof}
 
 \question 
-I first reprove a result from class. If every element of a set $B$ is an upperbound for a set $A$, then $\inf(B)$ is an upperbound for $A$. 
+I first reprove a result from class. If every element of a set $B$ is an upper bound for a set $A$, then $\inf(B)$ is an upper bound for $A$. 
 \begin{proof}
     Assume every element of $B$ is an upper bound for $A$, then if $\inf(B) < a$ for some $a \in A$, there exists $\epsilon = a - \inf(B) > 0$ such that $\inf(B) + \epsilon = a$, but 
     by the epsilon formulation of infinium, we have there exists an element of $b$ with $b < a$, a contradiction. 
 \end{proof}
 
 \begin{proof}
-    We prove that every element of $F = \inf\{f(x) | x \in X\}$ is an upperbound for the set $G = \{g(y)| y \in Y\}$, then it will follow $\sup(G) \leq \inf(F)$. 
+    We prove that every element of $F = \inf\{f(x) | x \in X\}$ is an upper bound for the set $G = \{g(y)| y \in Y\}$, then it will follow $\sup(G) \leq \inf(F)$. 
     Let $y_0 \in Y$ be arbitrary, then for all $x \in X$ we have 
     \[g(y_0) \leq h(x, y_0) \leq f(x).\]
-    The first inequality holds since $g(y)$ is the infinium over all choices of $x$ and the second holds since for each $x \in X$ we have defined $f(x)$ to be the suppremum over $y \in Y$. 
-    Then for each $g(y) \in G$, we have $g(y) \leq f(x)$ for all $x \in X$, thus each element of $F$ is an upperbound for $G$ and by the above, the result follows. 
+    The first inequality holds since $g(y)$ is the infinium over all choices of $x$ and the second holds since for each $x \in X$ we have defined $f(x)$ to be the supremum over $y \in Y$. 
+    Then for each $g(y) \in G$, we have $g(y) \leq f(x)$ for all $x \in X$, thus each element of $F$ is an upper bound for $G$ and by the above, the result follows. 
 \end{proof}
 
 \question 
@@ -141,8 +141,8 @@ If $u > 0$ and $x < y$ show there exists a rational number $x < ru< y$.
 
 
 \begin{proof}
-    Let $x, y \in \R$ with $x < y$. Then fix $n \in \N$ such that $\frac{1}{n} < y - x$, from this we imeiditly get $0 < 1 + xn < yn$. Now choose 
-    $m \in \N$ to be the intger such that $xn < m \leq xn + 1$. Then we have 
+    Let $x, y \in \R$ with $x < y$. Then fix $n \in \N$ such that $\frac{1}{n} < y - x$, from this we immediately get $0 < 1 + xn < yn$. Now choose 
+    $m \in \N$ to be the integer such that $xn < m \leq xn + 1$. Then we have 
     \[xn < m \leq xn + 1 < yn \implies xn < m < yn \implies x < \frac{m}{n} < y.\]
     Now note $\frac{x}{u}, \frac{y}{u} \in \R$ so there exists $s, t \in \Z$ such that 
     \[\frac{x}{u} < \frac{s}{t} < \frac{y}{u} \implies x < \frac{su}{t} < y \]
