analysis and topology notes

--- a/Analysis/CH2.tex
+++ b/Analysis/CH2.tex
@@ -69,4 +69,16 @@
         \[\|\bfv \|^2 + \| \bfv \| \|\bfw\| + \|\bfw\|^2\]
         and factoring finishes the proofs. 
     \end{proof}
+
+    Results:
+
+    maximal intervals 
+
+    any element belongs to one and only one maximal interval
+    
+    any open subset can be written as a union of disjoint maximal intervals 
+
+    bolzano-weierstrass 
+
+    
 \end{chapter}
